--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "node-twitter-api": "^1.8.0",
     "nodemon": "^2.0.4",
     "sentiment": "^5.0.2",
-    "twit": "^2.2.11"
+    "twit": "^2.2.11",
+    "unirest": "^0.6.0"
   }
 }
