--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "faunadb": "^3.0.1",
     "node-twitter-api": "^1.8.0",
     "nodemon": "^2.0.4",
     "sentiment": "^5.0.2",
