--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "name": "twitbot",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon ./server.js"
+  },
+  "engines": {
+    "node": "12.16.2"
   },
   "author": "",
   "license": "ISC",
