--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "faunadb": "^3.0.1",
+    "lodash.uniqby": "^4.7.0",
     "node-twitter-api": "^1.8.0",
     "nodemon": "^2.0.4",
     "sentiment": "^5.0.2",
